--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@ngneat/until-destroy": "^8.1.4",
+    "@vime/angular": "^5.0.33",
+    "buttplug": "^1.0.10",
+    "prettier": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
