--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
-    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
@@ -26,6 +25,7 @@
     "@vime/angular": "^5.0.33",
     "buttplug": "^1.0.10",
     "funscript-utils": "^1.1.3",
+    "ng-zorro-antd": "^11.4.2",
     "prettier": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
