--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
-    "build": "ng build --prod",
+    "build": "ng build --configuration production",
     "serve": "lite-server --baseDir=dist/funscript-player",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,44 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "@ngneat/hot-toast": "^3.4.1",
-    "@ngneat/until-destroy": "^8.1.4",
-    "@vime/angular": "^5.0.33",
+    "@angular/animations": "~13.1.1",
+    "@angular/common": "~13.1.1",
+    "@angular/compiler": "~13.1.1",
+    "@angular/core": "~13.1.1",
+    "@angular/forms": "~13.1.1",
+    "@angular/platform-browser": "~13.1.1",
+    "@angular/platform-browser-dynamic": "~13.1.1",
+    "@angular/router": "~13.1.1",
+    "@ngneat/hot-toast": "^4.1.0",
+    "@ngneat/overview": "^3.0.2",
+    "@ngneat/until-destroy": "^9.0.0",
+    "@vime/angular": "^5.3.1",
+    "@vime/core": "^5.3.1",
     "buttplug": "^1.0.10",
     "funscript-utils": "^1.1.3",
-    "ng-zorro-antd": "^11.4.2",
-    "prettier": "^2.4.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "ng-zorro-antd": "^13.0.0",
+    "prettier": "^2.5.1",
+    "rxjs": "~7.5.1",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "@types/video.js": "^7.3.26",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular-eslint/builder": "^13.0.1",
+    "@angular/cli": "~13.1.2",
+    "@angular/compiler-cli": "~13.1.1",
+    "@types/jasmine": "~3.10.3",
+    "@types/node": "^17.0.8",
+    "@types/video.js": "^7.3.29",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.10",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "~1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "video.js": "^7.15.4"
+    "typescript": "~4.5.4",
+    "video.js": "^7.17.0"
   }
 }
