--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
-    "@ngneat/hot-toast": "^3.4.1",
+    "@ngneat/hot-toast": "^3.4.3",
+    "@ngneat/overview": "^2.0.2",
     "@ngneat/until-destroy": "^8.1.4",
     "@vime/angular": "^5.0.33",
     "buttplug": "^1.0.10",
