feat: Config state to set device command and accompanying modal to change command and view hotkeys. Hotkey for funscript controller. Device command switch-case. Import required nz-icons only. Accept other files not just .funscript, if can JSON.parse then no worries,
refactor: Refactored device interaction into event-syncer.service.ts, switch to rxjs timer (stopwatch.ts) from js timeout. All UI interactions affecting device go through said service. Remove empty tests

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@ngneat/elf": "^1.5.6",
+    "@ngneat/elf-devtools": "^1.2.1",
+    "@ngneat/elf-entities": "^4.3.0",
+    "@ngneat/elf-persist-state": "^1.1.1",
     "@ngneat/hot-toast": "^3.4.3",
     "@ngneat/overview": "^2.0.2",
     "@ngneat/until-destroy": "^8.1.4",
