--- a/package.json
+++ b/package.json
@@ -4,60 +4,48 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
-    "build": "ng build --prod",
-    "serve": "lite-server --baseDir=dist/funscript-player",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "engines": {
-    "node": "16.20.0"
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "prepare": "husky || true"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "@ngneat/elf": "^1.5.6",
-    "@ngneat/elf-devtools": "^1.2.1",
-    "@ngneat/elf-entities": "^4.3.0",
-    "@ngneat/elf-persist-state": "^1.1.1",
-    "@ngneat/hot-toast": "^3.4.3",
-    "@ngneat/overview": "^2.0.2",
-    "@ngneat/until-destroy": "^8.1.4",
-    "@vime/angular": "^5.0.33",
-    "buttplug": "^1.0.10",
+    "@angular/animations": "^18.2.0",
+    "@angular/common": "^18.2.0",
+    "@angular/compiler": "^18.2.0",
+    "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
+    "@angular/platform-browser": "^18.2.0",
+    "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/router": "^18.2.0",
+    "@ngneat/elf": "^2.5.1",
+    "@ngneat/elf-persist-state": "^1.2.1",
+    "buttplug": "^3.2.2",
+    "buttplug-wasm": "^2.0.1",
     "funscript-utils": "^1.1.3",
-    "ng-zorro-antd": "^11.4.2",
-    "prettier": "^2.4.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "hls.js": "^1.5.17",
+    "ng-zorro-antd": "^18.2.1",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "@types/video.js": "^7.3.26",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5",
-    "video.js": "^7.15.4"
+    "@angular-devkit/build-angular": "^18.2.12",
+    "@angular/cli": "^18.2.12",
+    "@angular/compiler-cli": "^18.2.0",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
+    "husky": "^9.1.7",
+    "jasmine-core": "~5.2.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "~5.5.2"
   }
 }
