--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/assets/"
               },
               {
                 "glob": "**/*",
